# AndroidStreamingPlugin

./: config.js  index.html  params.json  settings.gradle
GMSAndroidManifest/: AndroidManifest.xml
GMSAndroidManifest/pushNotifications/: NotificationUtils.java
GMSAndroidManifest/pushNotifications/constants/: GcmConsts.java
GMSAndroidManifest/pushNotifications/gcm/: GcmPushListenerService.java
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/src/androidTest/java/com/bcch/neilconnatty/streamingplugin/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: StreamingPluginBridge.cpp  messaging_bridge.cpp  messenger.cpp  messenger.h  native-lib.cpp
app/src/main/cpp/c-core/core/: pubnub_ntf_sync.c
app/src/main/cpp/c-core/cpp/: pubnub_common.hpp  pubnub_futres_cpp11.cpp  pubnub_futres_posix.cpp
app/src/main/cpp/c-core/posix/: pubnub_ntf_callback_posix.c
app/src/main/java/com/bcch/neilconnatty/streamingplugin/: App.java  StreamingPlugin.java
app/src/main/java/com/bcch/neilconnatty/streamingplugin/activities/: ActivityLifecycle.java  MainActivity.java  TestActivity.java
app/src/main/java/com/bcch/neilconnatty/streamingplugin/imageViewer/: BitmapDecoder.java  BitmapResourceWorkerTask.java  BitmapStreamWorkerTask.java  BitmapWorkerTask.java  ContentRetriever.java  ImageDetailFragment.java  ZoomAnimator.java
app/src/main/java/com/bcch/neilconnatty/streamingplugin/messaging/: MessageUIUpdater.java  Messenger.java
app/src/main/java/com/bcch/neilconnatty/streamingplugin/messaging/remoteInput/: RemoteInput.java  RemoteInputCallbackListener.java  RemoteInputHandle.java
app/src/main/java/com/bcch/neilconnatty/streamingplugin/pushNotifications/: GooglePlayServicesHelper.java  MyFcmListenerService.java  MyInstanceIDListenerService.java  PushNotificationSubscriber.java
app/src/main/java/com/bcch/neilconnatty/streamingplugin/pushNotifications/constants/: GcmConsts.java
app/src/main/java/com/bcch/neilconnatty/streamingplugin/pushNotifications/fcm/: MyFcmListenerService.java  MyInstanceIDListenerService.java
app/src/main/java/com/bcch/neilconnatty/streamingplugin/pushNotifications/gcm/: GcmPushInstanceIDService.java  GcmPushListenerService.java
app/src/main/java/com/bcch/neilconnatty/streamingplugin/screenshot/: CameraPreview.java  PhotoTaker.java  PhotoUploader.java  TakeCameraPhotoTask.java  TakePhotoService.java  TakePhotoTask.java  TakeScreenshotTask.java
app/src/main/java/com/bcch/neilconnatty/streamingplugin/timer/: TimerCallback.java  TimerHelper.java  TimerUICallback.java
app/src/main/java/com/bcch/neilconnatty/streamingplugin/ui/: InterfaceFlipHandle.java
app/src/main/java/com/bcch/neilconnatty/streamingplugin/utils/: CallbacksListener.java  Consts.java  ListenerTestImplementation.java  QBResRequestExecutor.java  ResourceUtils.java  UserLoginHelper.java
app/src/main/res/layout/: activity_base.xml  activity_main.xml  activity_test.xml  fragment_image_detail.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/bcch/neilconnatty/streamingplugin/: ExampleUnitTest.java
js/: app.js  helpers.js
libstreamingplugin/: build.gradle  google-services.json  proguard-rules.pro
libstreamingplugin/src/androidTest/java/com/bcch/neilconnatty/libstreamingplugin/: ExampleInstrumentedTest.java
libstreamingplugin/src/main/: AndroidManifest.xml
libstreamingplugin/src/main/java/com/bcch/neilconnatty/libstreamingplugin/: StreamingPlugin.java
libstreamingplugin/src/main/java/com/bcch/neilconnatty/libstreamingplugin/activites/: BaseActivity.java
libstreamingplugin/src/main/java/com/bcch/neilconnatty/libstreamingplugin/callbacks/: QBSessionCallback.java
libstreamingplugin/src/main/java/com/bcch/neilconnatty/libstreamingplugin/screenshot/: PhotoTaker.java  PhotoUploader.java  TakePhotoTask.java
libstreamingplugin/src/main/java/com/bcch/neilconnatty/libstreamingplugin/utils/: CallbacksListener.java  Consts.java  ListenerTestImplementation.java  QBResRequestExecutor.java  UserLoginHelper.java
libstreamingplugin/src/main/res/values/: strings.xml
libstreamingplugin/src/test/java/com/bcch/neilconnatty/libstreamingplugin/: ExampleUnitTest.java
